fix: automatic color

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,3 +37,25 @@ h6 {
 ::-webkit-scrollbar-thumb:hover {
     background-color: rgba(255, 255, 255, 0.5);
 }
+
+
+.gum {
+    color: var(--gum, #fd78c4);
+}
+
+.pistachio {
+    color: var(--pistachio, #d3ffcc);
+}
+
+.cream {
+    color: var(--cream, #e2dfcd);
+}
+
+.cottonCandy {
+    color: var(--cotton-candy, #66d9ef);
+}
+
+.neonGreen {
+    color: #2dff0b;
+}
+
