--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,8 @@ section {
     font-size: 18px;
     font-style: normal;
     font-weight: 300;
-    line-height: 28px; /* 155.556% */
+    line-height: 28px;
+    min-width: 382px;
 }
 
 h6 {
@@ -45,10 +46,6 @@ h6 {
 
 .pistachio {
     color: var(--pistachio, #d3ffcc);
-}
-
-.cream {
-    color: var(--cream, #e2dfcd);
 }
 
 .cottonCandy {
